# mti-sites-sethstenzel.me

./: .gitignore  GMAIL_API_SETUP.md  README.md  WEBHOOK_SETUP.md  nginx-site-pre-cert.conf  pyproject.toml  webhook-listener.service  webhook-nginx.conf
src/mti_sites_sethstenzel_me/: routes.py  site.py  utils.py
src/mti_sites_sethstenzel_me/content/pages/: index.json  portfolio.json
src/mti_sites_sethstenzel_me/pages/: articles.py  contact.py  index.py  portfolio.py
src/mti_sites_sethstenzel_me/pages/templates/: center_card.py  constants.py  footer.py  header.py  nav_bar.py
src/mti_sites_sethstenzel_me/static/css/: styles.css
src/web_hook_listener/: webhook_listener.py
