[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mti-sites-sethstenzel.me"
version = "0.1.0"
description = "MTI NiceGUI / web sites for sethstenzel.me"
readme = "README.md"
requires-python = ">=3.13"
authors = [
  { name = "Seth Stenzel", email = "you@example.com" }
]
dependencies = [
    "nicegui>=3.2.0",
]

[project.urls]
Homepage = "https://sethstenzel.me"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]