[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mti-sites-sethstenzel.me"
version = "0.1.0"
description = "MTI NiceGUI / web sites for sethstenzel.me"
readme = "README.md"
requires-python = ">=3.13"
authors = [
  { name = "Seth Stenzel", email = "you@example.com" }
]
dependencies = [
    "nicegui>=3.2.0",
    "fastapi>=0.115.0", # For webhook listener auto-deployment
    "uvicorn[standard]>=0.32.0", # ASGI server for FastAPI
    "google-auth>=2.35.0", # For Gmail API authentication
    "google-auth-oauthlib>=1.2.0", # OAuth for Gmail API
    "google-api-python-client>=2.149.0", # Gmail API client
    "loguru>=0.7.0", # Better logging
]

[project.urls]
Homepage = "https://sethstenzel.me"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
